roles: use full module name to mitigate mitogen bug

--- a/roles/core/handlers/main.yml
+++ b/roles/core/handlers/main.yml
@@ -2,7 +2,7 @@
 # handlers for ivansible.wrt_core
 
 - name: restart wrt service ssh
-  openwrt_init2:
+  ivansible.entware.openwrt_init2:
     name: S40sshd
     state: restarted
   tags: skip_ansible_lint
