--- a/roles/wireguard/handlers/main.yml
+++ b/roles/wireguard/handlers/main.yml
@@ -2,7 +2,7 @@
 # handlers for ivansible.wrt_wireguard
 
 - name: restart wrt service wireguard
-  openwrt_init2:
+  ivansible.entware.openwrt_init2:
     name: "{{ wrt_wg_initd }}"
     state: restarted
   tags: skip_ansible_lint
