--- a/roles/sshtun/handlers/main.yml
+++ b/roles/sshtun/handlers/main.yml
@@ -2,7 +2,7 @@
 # handlers for ivansible.wrt_sshtun
 
 - name: restart wrt service sshtun
-  openwrt_init2:
+  ivansible.entware.openwrt_init2:
     name: "{{ wrt_sshtun_initd }}"
     state: restarted
   tags: skip_ansible_lint
