--- a/roles/v2ray/tasks/root.yml
+++ b/roles/v2ray/tasks/root.yml
@@ -5,7 +5,7 @@
   tags: wrt_v2ray_packages
 
 - name: detect latest v2ray client release
-  github_release:
+  ivansible.base.github_release:
     repository: v2fly/v2ray-core
     release: latest
     template: '{download_url}/v2ray-linux-mipsle.zip'
@@ -51,7 +51,7 @@
   tags: wrt_v2ray_service
 
 - name: enable wrt service v2ray
-  openwrt_init2:
+  ivansible.entware.openwrt_init2:
     name: "{{ wrt_v2ray_initd }}"
     state: started
   tags:
