--- a/roles/openvpn/tasks/root.yml
+++ b/roles/openvpn/tasks/root.yml
@@ -7,6 +7,7 @@
   file:
     path: /opt/etc/openvpn
     state: directory
+    mode: 0755
 
 
 - name: update openvpn configs
@@ -16,6 +17,7 @@
     content: "{{ lookup('template', 'client.ovpn').strip() }}"
     force: true
     backup: "{{ wrt_ovpn_backups |bool }}"
+    mode: 0644
   loop: "{{ wrt_ovpn_servers |default([],true) }}"
   loop_control:
     label: "{{ item.name }}"
