--- a/roles/sshtun/tasks/root.yml
+++ b/roles/sshtun/tasks/root.yml
@@ -31,6 +31,7 @@
   file:
     path: "{{ ansible_user_dir }}/.ssh"
     state: directory
+    mode: 0755
   tags:
     - wrt_sshtun_ssh
 
@@ -38,6 +39,7 @@
   file:
     path: /opt/etc/sshtun
     state: directory
+    mode: 0755
   tags:
     - wrt_sshtun_config
 
