--- a/roles/v2ray/tasks/root.yml
+++ b/roles/v2ray/tasks/root.yml
@@ -39,6 +39,7 @@
   file:
     path: /opt/var/log/v2ray
     state: directory
+    mode: 0755
   tags: wrt_v2ray_service
 
 - name: create v2ray init script
