v2ray,ss: fix ansible 5.x linter errors

--- a/roles/ss/tasks/v2ray.yml
+++ b/roles/ss/tasks/v2ray.yml
@@ -20,6 +20,7 @@
     url: "{{ latest_v2ray_plugin_release.url }}"
     dest: "{{ temp_v2ray_plugin_dir.path }}/release.tar.gz"
     force: true
+    mode: 0644
 
 ## Ansible unarchive module rejects busybox tar demanding GNU tar.
 ## As a workaround, download and unpack the archive manually
