--- a/roles/core/tasks/root.yml
+++ b/roles/core/tasks/root.yml
@@ -1,20 +1,21 @@
 ---
 - name: install core packages
-  opkg:
+  community.general.opkg:
     name: "{{ wrt_core_packages |join(',') }}"
   tags: wrt_core_packages
 
 - name: configure ssh
-  import_tasks: ssh.yml
+  ansible.builtin.import_tasks: ssh.yml
   tags: wrt_core_ssh
 
 - name: configure user environment
-  import_tasks: user.yml
+  ansible.builtin.import_tasks: user.yml
   tags: wrt_core_user
 
 - name: setup swap space
-  import_tasks: swap.yml
-  when: wrt_swap_size_mb |int > 0 and
-        wrt_swap_file |default('')
+  ansible.builtin.import_tasks: swap.yml
+  when:
+    - wrt_swap_size_mb |int > 0
+    - wrt_swap_file |d('')
   tags: wrt_core_swap
 ...
