--- a/roles/core/tasks/user.yml
+++ b/roles/core/tasks/user.yml
@@ -1,6 +1,6 @@
 ---
 - name: add shell aliases for user
-  blockinfile:
+  ansible.builtin.blockinfile:
     path: "{{ ansible_user_dir }}/.profile"
     block: |
       {% for alias in wrt_shell_aliases |dictsort %}
@@ -12,14 +12,14 @@
     mode: 0644
 
 - name: customize tmux for user
-  lineinfile:
+  ansible.builtin.lineinfile:
     path: "{{ ansible_user_dir }}/.tmux.conf"
     line: "{{ item }}"
     create: true
     mode: 0644
   loop:
     - 'set-option -g history-limit 22000'
-    - 'bind -n C-k clear-history'  # clear scroll buffer on Ctrl-K
-    - 'bind -n C-u copy-mode -u'   # show scroll buffer on Ctrl-U
+    - 'bind -n C-k clear-history'  # clear scroll buffer by Ctrl-K
+    - 'bind -n C-u copy-mode -u'   # show scroll buffer by Ctrl-U
     - 'new-session'                # auto-create new sessions
 ...
