--- a/roles/sshtun/templates/ssh.config
+++ b/roles/sshtun/templates/ssh.config
@@ -29,7 +29,7 @@ Host sshtun-{{ ssh_alias }}
 {% set local = forward.local |string %}
 {% set local_netloc = local if ':' in local else '127.0.0.1:' + local %}
 {% set remote_port = forward.remote |int %}
-  # {{ forward.comment |default('forward',true) }}
+  # {{ forward.comment |d('forward',true) }}
   RemoteForward {{ remote_port }} {{ local_netloc }}
 {% endfor %}
   # vpn
