--- a/roles/v2ray/tasks/install.yml
+++ b/roles/v2ray/tasks/install.yml
@@ -1,6 +1,6 @@
 ---
 - name: ensure that temporary directory parent exists
-  file:
+  ansible.builtin.file:
     state: directory
     ## avoid tmpfs in /tmp and /var/tmp as memory is limited
     path: "{{ ansible_user_dir }}/.ansible/tmp"
@@ -8,7 +8,7 @@
   register: temp_v2ray_parent
 
 - name: create temporary directory for v2ray client archive
-  tempfile:
+  ansible.builtin.tempfile:
     state: directory
     path: "{{ temp_v2ray_parent.path }}"
     prefix: v2ray-client-archive.
@@ -16,7 +16,7 @@
   notify: remove temporary v2ray client directory
 
 - name: download archived v2ray client
-  get_url:
+  ansible.builtin.get_url:
     url: "{{ latest_v2ray_client_release.url }}"
     dest: "{{ temp_v2ray_client_dir.path }}/release.zip"
     force: true
@@ -25,19 +25,19 @@
 ## Ansible unarchive module fails to invoke busybox unzip
 ## As a workaround, download and unpack the archive manually
 - name: unpack downloaded v2ray client archive
-  # noqa 303 301
-  command: unzip release.zip
-  args:
+  ansible.builtin.command:
+    # noqa 303 301
+    cmd: unzip release.zip
     chdir: "{{ temp_v2ray_client_dir.path }}"
 
 - name: ensure that v2ray client directory exists
-  file:
+  ansible.builtin.file:
     path: "{{ wrt_v2ray_client_binary |dirname }}"
     state: directory
     mode: 0755
 
 - name: copy v2ray client binary in place
-  copy:
+  ansible.builtin.copy:
     remote_src: true
     src: "{{ temp_v2ray_client_dir.path }}/v2ray"
     dest: "{{ wrt_v2ray_client_binary }}"
@@ -45,7 +45,7 @@
     mode: 0644
 
 - name: copy v2ctl binary in place
-  copy:
+  ansible.builtin.copy:
     remote_src: true
     src: "{{ temp_v2ray_client_dir.path }}/v2ctl"
     dest: "{{ wrt_v2ray_client_binary |dirname }}"
@@ -53,7 +53,7 @@
     mode: 0644
 
 - name: ensure that v2ray client and v2ctl binary are executable
-  file:
+  ansible.builtin.file:
     path: "{{ item }}"
     mode: 0755
   loop:
