--- a/roles/net/tasks/main.yml
+++ b/roles/net/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
 - name: become root and setup network routing
-  import_tasks: root.yml
+  ansible.builtin.import_tasks: root.yml
   become: true
   tags: wrt_net_all
 
 - name: add netfilter shell helpers for user
-  blockinfile:
+  ansible.builtin.blockinfile:
     path: "{{ ansible_user_dir }}/.profile"
     block: "{{ lookup('template', 'shell-helpers.sh') }}"
     marker: '# {mark} NETFILTER SHELL HERLPERS'
@@ -16,6 +16,6 @@
     - wrt_net_all
 
 - name: run postponed handlers now
-  meta: flush_handlers
+  ansible.builtin.meta: flush_handlers
   tags: wrt_net_all
 ...
