--- a/roles/srelay/tasks/main.yml
+++ b/roles/srelay/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: install srelay as root
-  import_tasks: root.yml
+  ansible.builtin.import_tasks: root.yml
   become: true
   when: wrt_srelay_enable |bool
   tags: wrt_srelay_all
 
 - name: run postponed handlers now
-  meta: flush_handlers
+  ansible.builtin.meta: flush_handlers
 ...
