--- a/roles/supervisor/tasks/main.yml
+++ b/roles/supervisor/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: setup and enable supervisor
-  import_tasks: root.yml
+  ansible.builtin.import_tasks: root.yml
   become: true
   when: wrt_use_supervisor |bool
   tags: wrt_supervisor_all
 
 - name: run postponed handlers now
-  meta: flush_handlers
+  ansible.builtin.meta: flush_handlers
 ...
