--- a/roles/v2ray/tasks/main.yml
+++ b/roles/v2ray/tasks/main.yml
@@ -1,10 +1,10 @@
 ---
 - name: install v2ray client as root
-  import_tasks: root.yml
+  ansible.builtin.import_tasks: root.yml
   become: true
   when: wrt_v2ray_enable |bool
   tags: wrt_v2ray_all
 
 - name: run postponed handlers now
-  meta: flush_handlers
+  ansible.builtin.meta: flush_handlers
 ...
