--- a/roles/wireguard/tasks/root.yml
+++ b/roles/wireguard/tasks/root.yml
@@ -1,11 +1,11 @@
 ---
 - name: install wireguard packages
-  opkg:
+  community.general.opkg:
     name: "{{ wrt_wg_packages |join(',') }}"
   tags: wrt_wg_install
 
 - name: install wireguard helper script wg-quick
-  copy:
+  ansible.builtin.copy:
     src: wg-quick.entware.sh
     dest: /opt/usr/sbin/wg-quick
     mode: 0755
@@ -14,7 +14,7 @@
   tags: wrt_wg_install
 
 - name: install wireguard helper script wg-setmetric
-  copy:
+  ansible.builtin.copy:
     src: wg-setmetric.entware.sh
     dest: /opt/usr/sbin/wg-setmetric
     mode: 0755
@@ -22,7 +22,7 @@
   tags: wrt_wg_install
 
 - name: create wireguard startup script
-  template:
+  ansible.builtin.template:
     src: wg-initd.sh
     dest: "/opt/etc/init.d/{{ wrt_wg_initd }}"
     mode: 0755
@@ -33,14 +33,14 @@
     - wrt_wg_service
 
 - name: create wireguard config directory
-  file:
+  ansible.builtin.file:
     path: /opt/etc/wireguard
     state: directory
     mode: 0755
   tags: wrt_wg_install
 
 - name: make null wireguard config
-  copy:
+  ansible.builtin.copy:
     dest: /opt/etc/wireguard/none.conf
     content: ''
     force: true
@@ -48,7 +48,7 @@
   tags: wrt_wg_config
 
 - name: update wireguard configuration
-  template:
+  ansible.builtin.template:
     src: wireguard.conf
     dest: /opt/etc/wireguard/{{ net.name }}.conf
     mode: 0640
@@ -69,13 +69,13 @@
   tags: wrt_wg_config
 
 - name: verify that default wireguard net has config
-  file:
+  ansible.builtin.file:
     path: "/opt/etc/wireguard/{{ wrt_wg_default_net |d('none',true) }}.conf"
     state: file
   tags: wrt_wg_config
 
 - name: update symlink for default wireguard net
-  file:
+  ansible.builtin.file:
     state: link
     dest: "/opt/etc/wireguard/{{ wrt_wg_dev }}.conf"
     src: "{{ wrt_wg_default_net |d('none',true) }}.conf"
