--- a/roles/yggdrasil/tasks/root.yml
+++ b/roles/yggdrasil/tasks/root.yml
@@ -1,18 +1,18 @@
 ---
 - name: install yggdrasil packages
-  opkg:
+  community.general.opkg:
     name: yggdrasil-go
   tags: wrt_ygg_install
 
 - name: directory for yggdrasil configs
-  file:
+  ansible.builtin.file:
     path: /opt/etc/yggdrasil
     state: directory
     mode: 0755
   tags: wrt_ygg_install
 
 - name: create yggdrasil startup script
-  copy:
+  ansible.builtin.copy:
     src: yggdrasil.rc.sh
     dest: /opt/etc/init.d/{{ ygg_initd }}
     mode: 0755
@@ -22,7 +22,7 @@
 
 
 - name: pull yggdrasil config from master peer
-  slurp:
+  ansible.builtin.slurp:
     src: "/etc/yggdrasil/yggdrasil.{{ alias }}"
   become: true
   delegate_to: "{{ ygg_master_host }}"
@@ -32,7 +32,7 @@
   tags: wrt_ygg_config
 
 - name: update yggdrasil config
-  copy:
+  ansible.builtin.copy:
     dest: /opt/etc/yggdrasil/yggdrasil.conf
     content: "{{ _ygg_config_data.content |b64decode }}"
     mode: 0644
@@ -41,7 +41,7 @@
   tags: wrt_ygg_config
 
 - name: pull isolated yggdrasil config from master peer
-  slurp:
+  ansible.builtin.slurp:
     src: "/etc/yggdrasil/yggdrasil.{{ alias }}-isolate"
   become: true
   delegate_to: "{{ ygg_master_host }}"
@@ -51,7 +51,7 @@
   tags: wrt_ygg_config
 
 - name: update isolated yggdrasil config
-  copy:
+  ansible.builtin.copy:
     dest: /opt/etc/yggdrasil/yggdrasil.isolate
     content: "{{ _ygg_config_data_isolate.content |b64decode }}"
     mode: 0644
@@ -74,14 +74,14 @@
 
 
 - name: directory for the list of internal hosts
-  file:
+  ansible.builtin.file:
     path: /opt/etc/net
     state: directory
     mode: 0755
   tags: wrt_ygg_firewall
 
 - name: add yggdrasil hosts to the list of internal hosts
-  template:
+  ansible.builtin.template:
     src: int-hosts.yggdrasil.j2
     dest: /opt/etc/net/int-hosts.ygg
     mode: 0644
