--- a/roles/openvpn/tasks/root.yml
+++ b/roles/openvpn/tasks/root.yml
@@ -27,6 +27,7 @@
     server_name: wrt
     client_name: "{{ item.name }}"
     server_host: "{{ item.host }}"
+    client_server_host: "{{ server_host }}"
     server_cname: "{{ item.cname }}"
     visible_port: "{{ item.port }}"
     client_proto: "{{ 'udp' if item.proto == 'udp' else 'tcp-client' }}"
@@ -43,12 +44,10 @@
     ovpn_ca_cert: "{{ item.ca_cert }}"
     ovpn_tlscrypt_key: "{{ item.tlscrypt_key }}"
 
-    ovpn_curve: "{{ wrt_ovpn_curve }}"
+    ovpn_tls13: "{{ wrt_ovpn_tls13 }}"
     ovpn_cipher: "{{ wrt_ovpn_cipher }}"
-    ovpn_cc_cipher: "{{ wrt_ovpn_cc_cipher }}"
     ovpn_hmac_alg: "{{ wrt_ovpn_hmac_alg }}"
     ovpn_reneg_sec: "{{ wrt_ovpn_reneg_sec }}"
-    ovpn_compress: "{{ wrt_ovpn_compress }}"
 
     client_device: "{{ wrt_ovpn_tun_device }}"
     interface_name: ~             # windows-only
